OO-3364: remove support for onyx